--- a/reforis_remote_wifi_settings/translations/nb_NO/LC_MESSAGES/messages.po
+++ b/reforis_remote_wifi_settings/translations/nb_NO/LC_MESSAGES/messages.po
@@ -1,4 +1,4 @@
-# Norwegian Bokmål (Norway) translations for PROJECT.
+# Norwegian Bokmål translations for PROJECT.
 # Copyright (C) 2020 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2020.
@@ -8,41 +8,42 @@ msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2020-03-02 15:34+0100\n"
-"PO-Revision-Date: 2020-03-02 15:34+0100\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language: nb_NO\n"
-"Language-Team: nb_NO <LL@li.org>\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"PO-Revision-Date: 2020-03-30 01:09+0000\n"
+"Last-Translator: Allan Nordhøy <epost@anotheragency.no>\n"
+"Language-Team: Norwegian Bokmål <https://hosted.weblate.org/projects/turris/"
+"reforis-remote-wifi-settings-plugin/nb_NO/>\n"
+"Language: nb\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.0-dev\n"
 "Generated-By: Babel 2.8.0\n"
 
 #: js/src/app.js:11 js/src/remote_wifi_settings/RemoteWiFiSettings.js:63
 msgid "Wi-Fi Settings"
-msgstr ""
+msgstr "Wi-Fi-innstillinger"
 
 #: js/src/remote_wifi_settings/RemoteWiFiSettings.js:38
 msgid "There are no devices for which you can manage Wi-Fi settings."
-msgstr ""
+msgstr "Ingen enheter å håndtere Wi-Fi-innstillinger for."
 
 #: js/src/remote_wifi_settings/RemoteWiFiSettings.js:45
 msgid "Device"
-msgstr ""
+msgstr "Enhet"
 
 #: js/src/remote_wifi_settings/RemoteWiFiSettings.js:48
 msgid "Select device for which you want to edit Wi-Fi settings."
-msgstr ""
+msgstr "Velg enhet å redigere Wi-Fi-innstillinger for."
 
 #: reforis_remote_wifi_settings/__init__.py:56
 msgid "Cannot update Wi-Fi settings."
-msgstr ""
+msgstr "Kan ikke oppdatere Wi-Fi-innstillinger."
 
 #: reforis_remote_wifi_settings/__init__.py:65
 msgid "Cannot reset Wi-Fi settings."
-msgstr ""
+msgstr "Kan ikke tilbakestille Wi-Fi-innstillinger."
 
 #: reforis_remote_wifi_settings/__init__.py:75
 msgid "Device '{}' is not available or does not have any Wi-Fi interfaces."
-msgstr ""
-
+msgstr "Enheten '{}' er utilgjengelig, eller mangler Wi-Fi-grensesnitt."
