--- a/reforis_remote_wifi_settings/translations/nb_NO/LC_MESSAGES/messages.po
+++ b/reforis_remote_wifi_settings/translations/nb_NO/LC_MESSAGES/messages.po
@@ -7,20 +7,20 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2020-03-02 15:34+0100\n"
+"POT-Creation-Date: 2021-02-03 14:22+0100\n"
 "PO-Revision-Date: 2020-03-30 01:09+0000\n"
 "Last-Translator: Allan Nordhøy <epost@anotheragency.no>\n"
-"Language-Team: Norwegian Bokmål <https://hosted.weblate.org/projects/turris/"
-"reforis-remote-wifi-settings-plugin/nb_NO/>\n"
 "Language: nb\n"
+"Language-Team: Norwegian Bokmål "
+"<https://hosted.weblate.org/projects/turris/reforis-remote-wifi-settings-"
+"plugin/nb_NO/>\n"
+"Plural-Forms: nplurals=2; plural=n != 1\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.0-dev\n"
-"Generated-By: Babel 2.8.0\n"
+"Generated-By: Babel 2.9.0\n"
 
-#: js/src/app.js:11 js/src/remote_wifi_settings/RemoteWiFiSettings.js:63
+#: js/src/app.js:11 js/src/remote_wifi_settings/RemoteWiFiSettings.js:62
 msgid "Wi-Fi Settings"
 msgstr "Wi-Fi-innstillinger"
 
@@ -47,3 +47,4 @@ msgstr "Kan ikke tilbakestille Wi-Fi-innstillinger."
 #: reforis_remote_wifi_settings/__init__.py:75
 msgid "Device '{}' is not available or does not have any Wi-Fi interfaces."
 msgstr "Enheten '{}' er utilgjengelig, eller mangler Wi-Fi-grensesnitt."
+
