--- a/reforis_remote_wifi_settings/translations/pl/LC_MESSAGES/messages.po
+++ b/reforis_remote_wifi_settings/translations/pl/LC_MESSAGES/messages.po
@@ -7,21 +7,20 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2020-03-02 15:34+0100\n"
+"POT-Creation-Date: 2021-02-03 14:22+0100\n"
 "PO-Revision-Date: 2020-12-23 13:29+0000\n"
 "Last-Translator: Adam Stańczyk <a.stanczyk@onet.pl>\n"
-"Language-Team: Polish <https://hosted.weblate.org/projects/turris/"
-"reforis-remote-wifi-settings-plugin/pl/>\n"
 "Language: pl\n"
+"Language-Team: Polish <https://hosted.weblate.org/projects/turris"
+"/reforis-remote-wifi-settings-plugin/pl/>\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && "
+"(n%100<10 || n%100>=20) ? 1 : 2\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 4.4.1-dev\n"
-"Generated-By: Babel 2.8.0\n"
+"Generated-By: Babel 2.9.0\n"
 
-#: js/src/app.js:11 js/src/remote_wifi_settings/RemoteWiFiSettings.js:63
+#: js/src/app.js:11 js/src/remote_wifi_settings/RemoteWiFiSettings.js:62
 msgid "Wi-Fi Settings"
 msgstr "Ustawienia Wi-Fi"
 
@@ -48,3 +47,4 @@ msgstr "Nie można zresetować ustawień Wi-Fi."
 #: reforis_remote_wifi_settings/__init__.py:75
 msgid "Device '{}' is not available or does not have any Wi-Fi interfaces."
 msgstr "Urządzenie '{}' nie jest dostępne lub nie ma żadnych interfejsów Wi-Fi."
+
