--- a/reforis_remote_wifi_settings/translations/tr/LC_MESSAGES/messages.po
+++ b/reforis_remote_wifi_settings/translations/tr/LC_MESSAGES/messages.po
@@ -1,4 +1,4 @@
-# Translations template for PROJECT.
+# Turkish translations for PROJECT.
 # Copyright (C) 2020 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2020.
@@ -7,20 +7,19 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2020-03-02 15:34+0100\n"
+"POT-Creation-Date: 2021-02-03 14:22+0100\n"
 "PO-Revision-Date: 2021-02-02 20:41+0000\n"
 "Last-Translator: Oğuz Ersen <oguzersen@protonmail.com>\n"
-"Language-Team: Turkish <https://hosted.weblate.org/projects/turris/"
-"reforis-remote-wifi-settings-plugin/tr/>\n"
 "Language: tr\n"
+"Language-Team: Turkish <https://hosted.weblate.org/projects/turris"
+"/reforis-remote-wifi-settings-plugin/tr/>\n"
+"Plural-Forms: nplurals=2; plural=n != 1\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.5-dev\n"
-"Generated-By: Babel 2.8.0\n"
+"Generated-By: Babel 2.9.0\n"
 
-#: js/src/app.js:11 js/src/remote_wifi_settings/RemoteWiFiSettings.js:63
+#: js/src/app.js:11 js/src/remote_wifi_settings/RemoteWiFiSettings.js:62
 msgid "Wi-Fi Settings"
 msgstr "Wi-Fi Ayarları"
 
@@ -46,5 +45,5 @@ msgstr "Wi-Fi ayarları sıfırlanamıyor."
 
 #: reforis_remote_wifi_settings/__init__.py:75
 msgid "Device '{}' is not available or does not have any Wi-Fi interfaces."
-msgstr ""
-"'{}' aygıtı kullanılamıyor veya herhangi bir Wi-Fi arayüzüne sahip değil."
+msgstr "'{}' aygıtı kullanılamıyor veya herhangi bir Wi-Fi arayüzüne sahip değil."
+
