--- a/reforis_remote_wifi_settings/translations/cs/LC_MESSAGES/messages.po
+++ b/reforis_remote_wifi_settings/translations/cs/LC_MESSAGES/messages.po
@@ -1,25 +1,24 @@
 # Czech translations for reForis Remote Wi-Fi Settings.
-# Copyright (C) 2024 CZ.NIC, z.s.p.o. (https://www.nic.cz/)
+# Copyright (C) 2025 CZ.NIC, z.s.p.o. (https://www.nic.cz/)
 # This file is distributed under the same license as the reForis Remote
 # Wi-Fi Settings project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2024.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2025.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-03-13 17:02+0100\n"
+"POT-Creation-Date: 2025-04-29 15:31+0200\n"
 "PO-Revision-Date: 2024-11-15 13:00+0000\n"
 "Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
-"Language-Team: Czech <https://hosted.weblate.org/projects/turris/"
-"reforis-remote-wifi-settings-plugin/cs/>\n"
 "Language: cs\n"
+"Language-Team: Czech <https://hosted.weblate.org/projects/turris/reforis-"
+"remote-wifi-settings-plugin/cs/>\n"
+"Plural-Forms: nplurals=3; plural=((n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=((n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2);\n"
-"X-Generator: Weblate 5.9-dev\n"
-"Generated-By: Babel 2.14.0\n"
+"Generated-By: Babel 2.17.0\n"
 
 #: js/src/app.js:11 js/src/remote_wifi_settings/RemoteWiFiSettings.js:81
 msgid "Wi-Fi Settings"
@@ -33,8 +32,8 @@ msgstr "Dostupná zařízení"
 #: js/src/remote_wifi_settings/RemoteWiFiSettings.js:49
 msgid "There are no devices for which you can manage Wi-Fi settings."
 msgstr ""
-"Nejsou k dispozici žádná zařízení, u kterých byste mohli spravovat nastavení "
-"Wi-Fi."
+"Nejsou k dispozici žádná zařízení, u kterých byste mohli spravovat "
+"nastavení Wi-Fi."
 
 #: js/src/remote_wifi_settings/RemoteWiFiSettings.js:61
 msgid "Device"
@@ -48,13 +47,14 @@ msgstr "Vybrat zařízení, pro které chcete upravit nastavení Wi-Fi."
 msgid "Here you can set up Wi-Fi on remote devices."
 msgstr "Zde můžete nastavit Wi-Fi na vzdálených zařízeních."
 
-#: reforis_remote_wifi_settings/__init__.py:59
+#: reforis_remote_wifi_settings/__init__.py:57
 msgid "Cannot update Wi-Fi settings."
 msgstr "Není možné aktualizovat nastavení Wi-Fi."
 
-#: reforis_remote_wifi_settings/__init__.py:69
+#: reforis_remote_wifi_settings/__init__.py:67
 msgid "Cannot reset Wi-Fi settings."
 msgstr "Není možné resetovat nastavení Wi-Fi."
 
 #~ msgid "Device '{}' is not available or does not have any Wi-Fi interfaces."
 #~ msgstr "Zařízení '{}' není k dispozici nebo nemá žádná rozhraní Wi-Fi."
+
