--- a/reforis_remote_wifi_settings/translations/de/LC_MESSAGES/messages.po
+++ b/reforis_remote_wifi_settings/translations/de/LC_MESSAGES/messages.po
@@ -1,25 +1,24 @@
 # German translations for reForis Remote Wi-Fi Settings.
-# Copyright (C) 2024 CZ.NIC, z.s.p.o. (https://www.nic.cz/)
+# Copyright (C) 2025 CZ.NIC, z.s.p.o. (https://www.nic.cz/)
 # This file is distributed under the same license as the reForis Remote
 # Wi-Fi Settings project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2024.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2025.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-03-13 17:02+0100\n"
+"POT-Creation-Date: 2025-04-29 15:31+0200\n"
 "PO-Revision-Date: 2024-10-23 02:15+0000\n"
 "Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
-"Language-Team: German <https://hosted.weblate.org/projects/turris/"
-"reforis-remote-wifi-settings-plugin/de/>\n"
 "Language: de\n"
+"Language-Team: German <https://hosted.weblate.org/projects/turris"
+"/reforis-remote-wifi-settings-plugin/de/>\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 5.8.2-dev\n"
-"Generated-By: Babel 2.14.0\n"
+"Generated-By: Babel 2.17.0\n"
 
 #: js/src/app.js:11 js/src/remote_wifi_settings/RemoteWiFiSettings.js:81
 msgid "Wi-Fi Settings"
@@ -48,13 +47,14 @@ msgstr ""
 msgid "Here you can set up Wi-Fi on remote devices."
 msgstr ""
 
-#: reforis_remote_wifi_settings/__init__.py:59
+#: reforis_remote_wifi_settings/__init__.py:57
 msgid "Cannot update Wi-Fi settings."
 msgstr "WLAN-Einstellungen können nicht aktualisiert werden."
 
-#: reforis_remote_wifi_settings/__init__.py:69
+#: reforis_remote_wifi_settings/__init__.py:67
 msgid "Cannot reset Wi-Fi settings."
 msgstr "WLAN-Einstellungen können nicht zurückgesetzt werden."
 
 #~ msgid "Device '{}' is not available or does not have any Wi-Fi interfaces."
 #~ msgstr "Gerät '{}' ist nicht verfügbar oder besitzt keine WLAN-Schnittstellen."
+
