--- a/reforis_remote_wifi_settings/translations/ru/LC_MESSAGES/messages.po
+++ b/reforis_remote_wifi_settings/translations/ru/LC_MESSAGES/messages.po
@@ -1,26 +1,25 @@
 # Russian translations for reForis Remote Wi-Fi Settings.
-# Copyright (C) 2024 CZ.NIC, z.s.p.o. (https://www.nic.cz/)
+# Copyright (C) 2025 CZ.NIC, z.s.p.o. (https://www.nic.cz/)
 # This file is distributed under the same license as the reForis Remote
 # Wi-Fi Settings project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2024.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2025.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-03-13 17:02+0100\n"
+"POT-Creation-Date: 2025-04-29 15:31+0200\n"
 "PO-Revision-Date: 2025-04-11 04:12+0000\n"
 "Last-Translator: Алексей Леньшин <alenshin@gmail.com>\n"
-"Language-Team: Russian <https://hosted.weblate.org/projects/turris/"
-"reforis-remote-wifi-settings-plugin/ru/>\n"
 "Language: ru\n"
+"Language-Team: Russian <https://hosted.weblate.org/projects/turris"
+"/reforis-remote-wifi-settings-plugin/ru/>\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
-"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Weblate 5.11-dev\n"
-"Generated-By: Babel 2.14.0\n"
+"Generated-By: Babel 2.17.0\n"
 
 #: js/src/app.js:11 js/src/remote_wifi_settings/RemoteWiFiSettings.js:81
 msgid "Wi-Fi Settings"
@@ -47,13 +46,14 @@ msgstr "Выберите устройство, для которого вы хо
 msgid "Here you can set up Wi-Fi on remote devices."
 msgstr "Здесь вы можете настроить Wi-Fi на удаленных устройствах."
 
-#: reforis_remote_wifi_settings/__init__.py:59
+#: reforis_remote_wifi_settings/__init__.py:57
 msgid "Cannot update Wi-Fi settings."
 msgstr "Невозможно обновить настройки Wi-Fi."
 
-#: reforis_remote_wifi_settings/__init__.py:69
+#: reforis_remote_wifi_settings/__init__.py:67
 msgid "Cannot reset Wi-Fi settings."
 msgstr "Невозможно сбросить настройки Wi-Fi."
 
 #~ msgid "Device '{}' is not available or does not have any Wi-Fi interfaces."
 #~ msgstr "Устройство '{}' недоступно или не имеет интерфейсов Wi-Fi."
+
