--- a/reforis_remote_wifi_settings/translations/sk/LC_MESSAGES/messages.po
+++ b/reforis_remote_wifi_settings/translations/sk/LC_MESSAGES/messages.po
@@ -1,25 +1,24 @@
 # Slovak translations for reForis Remote Wi-Fi Settings.
-# Copyright (C) 2024 CZ.NIC, z.s.p.o. (https://www.nic.cz/)
+# Copyright (C) 2025 CZ.NIC, z.s.p.o. (https://www.nic.cz/)
 # This file is distributed under the same license as the reForis Remote
 # Wi-Fi Settings project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2024.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2025.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-03-13 17:02+0100\n"
+"POT-Creation-Date: 2025-04-29 15:31+0200\n"
 "PO-Revision-Date: 2024-08-03 21:09+0000\n"
 "Last-Translator: Atec <dr.atec@gmail.com>\n"
-"Language-Team: Slovak <https://hosted.weblate.org/projects/turris/"
-"reforis-remote-wifi-settings-plugin/sk/>\n"
 "Language: sk\n"
+"Language-Team: Slovak <https://hosted.weblate.org/projects/turris"
+"/reforis-remote-wifi-settings-plugin/sk/>\n"
+"Plural-Forms: nplurals=3; plural=((n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=((n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2);\n"
-"X-Generator: Weblate 5.7-dev\n"
-"Generated-By: Babel 2.14.0\n"
+"Generated-By: Babel 2.17.0\n"
 
 #: js/src/app.js:11 js/src/remote_wifi_settings/RemoteWiFiSettings.js:81
 msgid "Wi-Fi Settings"
@@ -48,13 +47,14 @@ msgstr "Vyberte zariadenie, u ktorého chcete upraviť nastavenia Wi-Fi."
 msgid "Here you can set up Wi-Fi on remote devices."
 msgstr "Tu je možné nastaviť Wi-Fi na vzdialených zariadeniach."
 
-#: reforis_remote_wifi_settings/__init__.py:59
+#: reforis_remote_wifi_settings/__init__.py:57
 msgid "Cannot update Wi-Fi settings."
 msgstr "Nastavenia Wi-Fi nie je možné aktualizovať."
 
-#: reforis_remote_wifi_settings/__init__.py:69
+#: reforis_remote_wifi_settings/__init__.py:67
 msgid "Cannot reset Wi-Fi settings."
 msgstr "Nastavenia Wi-Fi nie je možné resetovať."
 
 #~ msgid "Device '{}' is not available or does not have any Wi-Fi interfaces."
 #~ msgstr "Zariadenie '{}' nie je dostupné alebo nemá žiadne Wi-Fi rozhranie."
+
