--- a/reforis_remote_wifi_settings/translations/ta/LC_MESSAGES/messages.po
+++ b/reforis_remote_wifi_settings/translations/ta/LC_MESSAGES/messages.po
@@ -1,25 +1,24 @@
-# Translations template for reForis Remote Wi-Fi Settings.
-# Copyright (C) 2024 CZ.NIC, z.s.p.o. (https://www.nic.cz/)
+# Tamil translations for reForis Remote Wi-Fi Settings.
+# Copyright (C) 2025 CZ.NIC, z.s.p.o. (https://www.nic.cz/)
 # This file is distributed under the same license as the reForis Remote
 # Wi-Fi Settings project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2024.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2025.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: reForis Remote Wi-Fi Settings 1.0.0\n"
 "Report-Msgid-Bugs-To: tech.support@turris.cz\n"
-"POT-Creation-Date: 2024-03-13 17:02+0100\n"
+"POT-Creation-Date: 2025-04-29 15:31+0200\n"
 "PO-Revision-Date: 2025-03-19 13:25+0000\n"
 "Last-Translator: தமிழ்நேரம் <anishprabu.t@gmail.com>\n"
-"Language-Team: Tamil <https://hosted.weblate.org/projects/turris/"
-"reforis-remote-wifi-settings-plugin/ta/>\n"
 "Language: ta\n"
+"Language-Team: Tamil <https://hosted.weblate.org/projects/turris/reforis-"
+"remote-wifi-settings-plugin/ta/>\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 5.11-dev\n"
-"Generated-By: Babel 2.14.0\n"
+"Generated-By: Babel 2.17.0\n"
 
 #: js/src/app.js:11 js/src/remote_wifi_settings/RemoteWiFiSettings.js:81
 msgid "Wi-Fi Settings"
@@ -41,16 +40,18 @@ msgstr "சாதனம்"
 #: js/src/remote_wifi_settings/RemoteWiFiSettings.js:64
 msgid "Select device for which you want to edit Wi-Fi settings."
 msgstr ""
-"நீங்கள் வைஃபை அமைப்புகளைத் திருத்த விரும்பும் சாதனத்தைத் தேர்ந்தெடுக்கவும்."
+"நீங்கள் வைஃபை அமைப்புகளைத் திருத்த விரும்பும் சாதனத்தைத் "
+"தேர்ந்தெடுக்கவும்."
 
 #: js/src/remote_wifi_settings/RemoteWiFiSettings.js:82
 msgid "Here you can set up Wi-Fi on remote devices."
 msgstr "இங்கே நீங்கள் தொலைநிலை சாதனங்களில் வைஃபை அமைக்கலாம்."
 
-#: reforis_remote_wifi_settings/__init__.py:59
+#: reforis_remote_wifi_settings/__init__.py:57
 msgid "Cannot update Wi-Fi settings."
 msgstr "வைஃபை அமைப்புகளை புதுப்பிக்க முடியாது."
 
-#: reforis_remote_wifi_settings/__init__.py:69
+#: reforis_remote_wifi_settings/__init__.py:67
 msgid "Cannot reset Wi-Fi settings."
 msgstr "வைஃபை அமைப்புகளை மீட்டமைக்க முடியாது."
+
